# bolt-rs

./: .gitignore  Cargo.toml  README.md
proto/: Cargo.toml
proto-common/: Cargo.toml
proto-common/src/: marker.rs
proto-macros/: Cargo.toml
proto-macros/src/: bolt_struct.rs  lib.rs
proto/src/: demo.rs  lib.rs  result_type.rs  serialization.rs
proto/src/value/: conversions.rs  duration.rs  mod.rs  node.rs  path.rs  point_2d.rs  point_3d.rs  relationship.rs  time.rs  unbound_relationship.rs  value.rs
